<package>
  <name>images_utils</name>
  <version>0.0.1</version>
  <description>Image utils to work with SVO.</description>
  <author>Uladzislau Bohdan</author>
  <maintainer email="vlbohdan@gmail.com">Uladzislau Bohdan</maintainer>
  <license>Apache 2.0</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<export>-->
    <!--<image_transport plugin="${prefix}/resized_plugins.xml"/>-->
  <!--</export>-->
</package>
